feat: did some reworking

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -39,5 +39,9 @@
     "Store Information": "Winkel Informatie",
     "Description": "Beschrijving",
     "Save": "Opslaan",
-    "No stores yet. Get started now by clicking the link in the top right.": "Nog geen winkels. Klink op de link rechtsbovenin om te beginnen."
+    "No stores yet. Get started now by clicking the link in the top right.": "Nog geen winkels. Klink op de link rechtsbovenin om te beginnen.",
+    "Create Product": "Product Toevoegen",
+    "Product Information": "Product Informatie",
+    "Price": "Prijs",
+    "Image": "Afbeelding"
 }
