feat: added some product routes

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -43,5 +43,6 @@
     "Create Product": "Product Toevoegen",
     "Product Information": "Product Informatie",
     "Price": "Prijs",
-    "Image": "Afbeelding"
+    "Image": "Afbeelding",
+    "Edit Product": "Product Aanpassen"
 }
