feat: did some styling

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -44,5 +44,7 @@
     "Product Information": "Product Informatie",
     "Price": "Prijs",
     "Image": "Afbeelding",
-    "Edit Product": "Product Aanpassen"
+    "Edit Product": "Product Aanpassen",
+    "Products": "Producten",
+    "New": "Nieuw"
 }
