--- a/lang/nl.json
+++ b/lang/nl.json
@@ -46,5 +46,8 @@
     "Image": "Afbeelding",
     "Edit Product": "Product Aanpassen",
     "Products": "Producten",
-    "New": "Nieuw"
+    "New": "Nieuw",
+    "Submit": "Versturen",
+    "Message": "Bericht",
+    "We have received your message. We will get back to you as soon as possible.": "We hebben uw bericht ontvangen. We komen zo spoedig mogelijk bij u terug."
 }
