--- a/lang/nl.json
+++ b/lang/nl.json
@@ -49,5 +49,10 @@
     "New": "Nieuw",
     "Submit": "Versturen",
     "Message": "Bericht",
-    "We have received your message. We will get back to you as soon as possible.": "We hebben uw bericht ontvangen. We komen zo spoedig mogelijk bij u terug."
+    "We have received your message. We will get back to you as soon as possible.": "We hebben uw bericht ontvangen. We komen zo spoedig mogelijk bij u terug.",
+    "Access denied": "Toegang geweigerd",
+    "You do not have permission to access this page.": "U hebt geen toestemming om deze pagina te bezoeken.",
+    "Back to home": "Terug naar huis",
+    "Page not found": "Pagina niet gevonden",
+    "Sorry, we couldn’t find the page you’re looking for.": "Sorry, we konden de pagina die je zoekt niet vinden."
 }
