feat: added onboarding flow

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -54,5 +54,7 @@
     "You do not have permission to access this page.": "U hebt geen toestemming om deze pagina te bezoeken.",
     "Back to home": "Terug naar huis",
     "Page not found": "Pagina niet gevonden",
-    "Sorry, we couldn’t find the page you’re looking for.": "Sorry, we konden de pagina die je zoekt niet vinden."
+    "Sorry, we couldn’t find the page you’re looking for.": "Sorry, we konden de pagina die je zoekt niet vinden.",
+    "Create your store": "Maak je winkel",
+    "Add your first product": "Voeg je eerste product toe"
 }
