--- a/lang/nl.json
+++ b/lang/nl.json
@@ -1,7 +1,7 @@
 {
     "How it works": "Hoe het werkt",
     "Share your craft with the world": "Deel je ambacht met de wereld",
-    "Create a beautiful page for your local products — no tech skills needed": "Maak een prachtige website for je locale producten — geen technische kennis nodig",
+    "Create a beautiful page for your local products, no tech skills needed": "Maak een prachtige website for je locale producten, geen technische kennis nodig",
     "Get started": "Begin nu",
     "Get your own beautiful storefront in just a few simple steps": "Krijg je eigen prachtige winkel in een paar simpele stappen",
     "Create your shop": "Maak je winkel",
@@ -56,5 +56,7 @@
     "Page not found": "Pagina niet gevonden",
     "Sorry, we couldn’t find the page you’re looking for.": "Sorry, we konden de pagina die je zoekt niet vinden.",
     "Create your store": "Maak je winkel",
-    "Add your first product": "Voeg je eerste product toe"
+    "Add your first product": "Voeg je eerste product toe",
+    "Contact": "Contact",
+    "You can always contact us with any questions, we will get back to you as fast as possible.": "U kunt altijd contact met ons opnemen als u vragen heeft. Wij reageren zo snel mogelijk."
 }
