--- a/lang/nl.json
+++ b/lang/nl.json
@@ -58,5 +58,6 @@
     "Create your store": "Maak je winkel",
     "Add your first product": "Voeg je eerste product toe",
     "Contact": "Contact",
-    "You can always contact us with any questions, we will get back to you as fast as possible.": "U kunt altijd contact met ons opnemen als u vragen heeft. Wij reageren zo snel mogelijk."
+    "You can always contact us with any questions, we will get back to you as fast as possible.": "U kunt altijd contact met ons opnemen als u vragen heeft. Wij reageren zo snel mogelijk.",
+    "Are you sure? Click again": "Weet je het zeker? Klik dan nogmaals"
 }
