--- a/lang/nl.json
+++ b/lang/nl.json
@@ -59,5 +59,7 @@
     "Add your first product": "Voeg je eerste product toe",
     "Contact": "Contact",
     "You can always contact us with any questions, we will get back to you as fast as possible.": "U kunt altijd contact met ons opnemen als u vragen heeft. Wij reageren zo snel mogelijk.",
-    "Are you sure? Click again": "Weet je het zeker? Klik dan nogmaals"
+    "Are you sure? Click again": "Weet je het zeker? Klik dan nogmaals",
+    "Delete Store": "Winkel Verwijderen",
+    "Edit Store": "Winkel Aanpassen"
 }
