--- a/lang/nl.json
+++ b/lang/nl.json
@@ -61,5 +61,6 @@
     "You can always contact us with any questions, we will get back to you as fast as possible.": "U kunt altijd contact met ons opnemen als u vragen heeft. Wij reageren zo snel mogelijk.",
     "Are you sure? Click again": "Weet je het zeker? Klik dan nogmaals",
     "Delete Store": "Winkel Verwijderen",
-    "Edit Store": "Winkel Aanpassen"
+    "Edit Store": "Winkel Aanpassen",
+    "Update": "Aanpassen"
 }
