feat: added privacy policy and terms of use

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -62,5 +62,23 @@
     "Are you sure? Click again": "Weet je het zeker? Klik dan nogmaals",
     "Delete Store": "Winkel Verwijderen",
     "Edit Store": "Winkel Aanpassen",
-    "Update": "Aanpassen"
+    "Update": "Aanpassen",
+    "Privacy Policy": "Privacybeleid",
+    "Terms of Use": "Gebruiksvoorwaarden",
+    "Effective Date: :date": "Ingangsdatum: :date",
+    "We collect name and email address when you register or contact us.": "We verzamelen je naam en e-mailadres wanneer je je registreert of contact met ons opneemt.",
+    "We use your data to create and manage your artisan store and contact you regarding your account or support queries. We do not sell or share your personal information with third parties for marketing.": "We gebruiken je gegevens om je winkel te beheren en contact met je op te nemen over je account of vragen. We verkopen of delen je gegevens niet met derden voor marketingdoeleinden.",
+    "We use Fathom Analytics (no personal data collection) and Cloudflare for CDN and caching.": "We gebruiken Fathom Analytics (verzamelt geen persoonsgegevens) en Cloudflare voor CDN en caching.",
+    "You may submit content such as your store name, store description, product details, and images. You are responsible for ensuring this content does not violate any laws or rights.": "Je kunt inhoud toevoegen zoals je winkelnaam, beschrijving, productdetails en afbeeldingen. Jij bent verantwoordelijk dat deze inhoud geen wetten of rechten schendt.",
+    "Visitors can contact artisans via email or Instagram links if provided by the artisan. localpantry.shop is not responsible for communications between artisans and visitors.": "Bezoekers kunnen contact opnemen met makers via e-mail of Instagram-links als de maker die heeft ingevuld. localpantry.shop is niet verantwoordelijk voor deze communicatie.",
+    "We use only functional cookies necessary to operate the site. We do not use tracking or advertising cookies.": "We gebruiken alleen functionele cookies die nodig zijn voor het functioneren van de site. We gebruiken geen tracking- of advertentiecookies.",
+    "You can request deletion of your account and associated data by contacting us at :contact": "Je kunt verzoeken je account en bijbehorende gegevens te verwijderen door contact met ons op te nemen via :contact",
+    "localpantry.shop provides local artisans with a platform to create simple online storefronts. We do not facilitate direct sales. Visitors may view products and contact artisans independently.": "localpantry.shop biedt lokale makers een platform om eenvoudige online etalages te maken. We faciliteren geen directe verkoop. Bezoekers kunnen producten bekijken en zelf contact opnemen met de maker.",
+    "To register, you must be at least 18 years old and provide accurate name and email information. You are responsible for any content you publish on your store.": "Om je te registreren moet je minimaal 18 jaar oud zijn en correcte naam- en e-mailgegevens opgeven. Jij bent verantwoordelijk voor alle inhoud die je plaatst in je winkel.",
+    "You agree not to upload content that is illegal, fraudulent, misleading, infringes intellectual property rights, or contains hate speech or offensive material.": "Je stemt ermee in geen inhoud te uploaden die illegaal, misleidend of in strijd met intellectuele eigendomsrechten is, of die haatzaaiend of beledigend materiaal bevat.",
+    "We do not guarantee sales, traffic, or visibility and may update or discontinue features at any time.": "We garanderen geen verkopen, bezoekers of zichtbaarheid en kunnen op elk moment functies wijzigen of verwijderen.",
+    "Your store may include links (e.g., to Instagram or email). We are not responsible for the content or security of third-party sites.": "Je winkel kan links bevatten (bijv. naar Instagram of e-mail). Wij zijn niet verantwoordelijk voor de inhoud of veiligheid van externe websites.",
+    "localpantry.shop is not responsible for issues arising from communication or transactions between artisans and visitors, or for data loss and downtime.": "localpantry.shop is niet verantwoordelijk voor problemen die ontstaan uit communicatie of transacties tussen makers en bezoekers, of voor dataverlies of downtime.",
+    "We may suspend or remove accounts that violate these terms without prior notice.": "We kunnen accounts die deze voorwaarden schenden zonder voorafgaande waarschuwing opschorten of verwijderen.",
+    "For questions, contact us at :contact": "Voor vragen kun je contact met ons opnemen via :contact"
 }
