feat: added about page

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -80,5 +80,11 @@
     "Your store may include links (e.g., to Instagram or email). We are not responsible for the content or security of third-party sites.": "Je winkel kan links bevatten (bijv. naar Instagram of e-mail). Wij zijn niet verantwoordelijk voor de inhoud of veiligheid van externe websites.",
     "localpantry.shop is not responsible for issues arising from communication or transactions between artisans and visitors, or for data loss and downtime.": "localpantry.shop is niet verantwoordelijk voor problemen die ontstaan uit communicatie of transacties tussen makers en bezoekers, of voor dataverlies of downtime.",
     "We may suspend or remove accounts that violate these terms without prior notice.": "We kunnen accounts die deze voorwaarden schenden zonder voorafgaande waarschuwing opschorten of verwijderen.",
-    "For questions, contact us at :contact": "Voor vragen kun je contact met ons opnemen via :contact"
+    "For questions, contact us at :contact": "Voor vragen kun je contact met ons opnemen via :contact",
+    "About localpantry.shop": "Over localpantry.shop",
+    "localpantry.shop is a simple platform that helps local makers share their products online, without needing web or design skills.": "localpantry.shop is een eenvoudig platform dat lokale makers helpt hun producten online te delen, zonder kennis van websites of design.",
+    "We're just getting started, but our mission is clear: to make it easier for small artisans to get discovered, showcase their work, and connect with their communities.": "We zijn net begonnen, maar onze missie is duidelijk: het gemakkelijker maken voor kleine ambachtslieden om ontdekt te worden, hun werk te tonen en contact te maken met hun gemeenschap.",
+    "If you create, bake, grow, brew, or build, this platform is made for you.": "Als je iets maakt, bakt, kweekt, brouwt of bouwt, dan is dit platform voor jou.",
+    "We're a small team, and this is a labor of love. Thank you for being here from the beginning.": "We zijn een klein team en dit is een project uit liefde. Bedankt dat je er vanaf het begin bij bent.",
+    "About": "Over"
 }
