feat: added meta tags

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -86,5 +86,8 @@
     "We're just getting started, but our mission is clear: to make it easier for small artisans to get discovered, showcase their work, and connect with their communities.": "We zijn net begonnen, maar onze missie is duidelijk: het gemakkelijker maken voor kleine ambachtslieden om ontdekt te worden, hun werk te tonen en contact te maken met hun gemeenschap.",
     "If you create, bake, grow, brew, or build, this platform is made for you.": "Als je iets maakt, bakt, kweekt, brouwt of bouwt, dan is dit platform voor jou.",
     "We're a small team, and this is a labor of love. Thank you for being here from the beginning.": "We zijn een klein team en dit is een project uit liefde. Bedankt dat je er vanaf het begin bij bent.",
-    "About": "Over"
+    "About": "Over",
+    "Discover local artisans on localpantry.shop": "Ontdek lokale ambachtslieden op localpantry.shop",
+    "Forgot Password": "Wachtwoord Vergeten",
+    "Verify Email": "E-mailadres verifiëren"
 }
