fix: share button and detail view

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -161,5 +161,6 @@
     "You have reached the maximum number of products.": "Je hebt het maximale aantal producten bereikt.",
     "You have reached the maximum number of stores.": "Je hebt het maximale aantal winkels bereikt.",
     "This name is not allowed.": "Deze naam is niet toegestaan.",
-    "A store with this name (or similar) already exists.": "Een winkel met deze naam (of vergelijkbaar) bestaat al."
+    "A store with this name (or similar) already exists.": "Een winkel met deze naam (of vergelijkbaar) bestaat al.",
+    "Link copied to clipboard": "Link gekopieerd naar klembord"
 }
