chore: updated welcome page

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -162,5 +162,16 @@
     "You have reached the maximum number of stores.": "Je hebt het maximale aantal winkels bereikt.",
     "This name is not allowed.": "Deze naam is niet toegestaan.",
     "A store with this name (or similar) already exists.": "Een winkel met deze naam (of vergelijkbaar) bestaat al.",
-    "Link copied to clipboard": "Link gekopieerd naar klembord"
+    "Link copied to clipboard": "Link gekopieerd naar klembord",
+    "Why we built localpantry.shop": "Waarom we localpantry.shop gemaakt hebben",
+    "We believe local artisans deserve beautiful, simple tools to share their work online, without needing tech skills or big budgets. localpantry.shop is built for makers, by people who care about craft.": "Wij geloven dat lokale ambachtslieden mooie, eenvoudige tools verdienen om hun werk online te delen, zonder technische kennis of groot budget. localpantry.shop is gemaakt voor makers, door mensen die geven om vakmanschap.",
+    "Built with care, not complexity": "Gemaakt met zorg, niet met complexiteit",
+    "localpantry.shop is intentionally simple. It’s fast, privacy-friendly, and respectful of your time and your visitors. No logins for customers. No ads. Just your craft.": "localpantry.shop is bewust eenvoudig. Het is snel, privacyvriendelijk en respectvol naar jouw tijd en die van je bezoekers. Geen inlog voor klanten. Geen advertenties. Alleen jouw vakmanschap.",
+    "Frequently asked questions": "Veelgestelde vragen",
+    "We don’t process sales. Your shop page is like a digital business card with your products and contact info.": "Wij verwerken geen verkopen. Jouw winkelpagina is als een digitaal visitekaartje met je producten en contactgegevens.",
+    "Is it free?": "Is het gratis?",
+    "No. There is a small fee to keep things running, but we’ll always keep it simple and fair.": "Nee. Er is een kleine bijdrage om alles draaiende te houden, maar we zorgen dat het altijd simpel en eerlijk blijft.",
+    "Do I need to know how to code?": "Moet ik kunnen programmeren?",
+    "No. If you can write an email, you can use localpantry.shop.": "Nee. Als je een e-mail kan schrijven, kan je localpantry.shop gebruiken.",
+    "Can I sell products directly?": "Kan ik zo producten verkopen?"
 }
