feat: added contact fields to storefronts

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -173,5 +173,8 @@
     "No. There is a small fee to keep things running, but we’ll always keep it simple and fair.": "Nee. Er is een kleine bijdrage om alles draaiende te houden, maar we zorgen dat het altijd simpel en eerlijk blijft.",
     "Do I need to know how to code?": "Moet ik kunnen programmeren?",
     "No. If you can write an email, you can use localpantry.shop.": "Nee. Als je een e-mail kan schrijven, kan je localpantry.shop gebruiken.",
-    "Can I sell products directly?": "Kan ik zo producten verkopen?"
+    "Can I sell products directly?": "Kan ik zo producten verkopen?",
+    "Optional": "Optioneel",
+    "Get in touch": "Neem contact op",
+    "You can get in touch with me using any of these.": "Je kunt contact met me opnemen via een van deze opties."
 }
