feat: added related products

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -176,5 +176,7 @@
     "Can I sell products directly?": "Kan ik zo producten verkopen?",
     "Optional": "Optioneel",
     "Get in touch": "Neem contact op",
-    "You can get in touch with me using any of these.": "Je kunt contact met me opnemen via een van deze opties."
+    "You can get in touch with me using any of these.": "Je kunt contact met me opnemen via een van deze opties.",
+    "Available": "Beschikbaar",
+    "More products from this store": "Meer producten van deze winkel"
 }
