feat: added more stuff on storefront

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -6,7 +6,9 @@
     "A new verification link has been sent to your email address.": "Er is een nieuwe verificatielink naar je e-mailadres verstuurd.",
     "About": "Over",
     "About localpantry.shop": "Over localpantry.shop",
+    "About the store": "Over de winkel",
     "Access denied": "Toegang geweigerd",
+    "Added": "Toegevoegd",
     "Add Product": "Product Toevoegen",
     "Add Store": "Winkel Toevoegen",
     "Add your first product": "Voeg je eerste product toe",
@@ -16,6 +18,7 @@
     "Are you sure you want to delete your account?": "Weet je zeker dat je je account wilt verwijderen?",
     "Are you sure? Click again": "Weet je het zeker? Klik dan nogmaals",
     "Back to home": "Terug naar huis",
+    "Back to store": "Terug naar winkel",
     "Cancel": "Annuleren",
     "Click here to re-send the verification email.": "Klik hier om de verificatie e-mail opnieuw te versturen.",
     "Confirm": "Bevestigen",
