feat: added kamal

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -173,7 +173,7 @@
     "Frequently asked questions": "Veelgestelde vragen",
     "We don’t process sales. Your shop page is like a digital business card with your products and contact info.": "Wij verwerken geen verkopen. Jouw winkelpagina is als een digitaal visitekaartje met je producten en contactgegevens.",
     "Is it free?": "Is het gratis?",
-    "No. There is a small fee to keep things running, but we’ll always keep it simple and fair.": "Nee. Er is een kleine bijdrage om alles draaiende te houden, maar we zorgen dat het altijd simpel en eerlijk blijft.",
+    "Yes. For now localpantry.shop is free to use.": "Ja. Voor nu is localpantry.shop gratis te gebruiken.",
     "Do I need to know how to code?": "Moet ik kunnen programmeren?",
     "No. If you can write an email, you can use localpantry.shop.": "Nee. Als je een e-mail kan schrijven, kan je localpantry.shop gebruiken.",
     "Can I sell products directly?": "Kan ik zo producten verkopen?",
